--- a/PP-Simulator.1.csproj
+++ b/PP-Simulator.1.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>PP_Simulator._1</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
